get history for test
